--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,6 +22,12 @@ jobs:
     - name: Install dependencies
       run: npm install
 
+    - name: Build project
+      run: npm run build
+
+    - name: Run tests
+      run: npm test
+
     - name: Publish to npm
       run: npm publish
       env:
