--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc -b --clean && tsc",
     "start": "node dist/index.js",
     "dev": "yarn run build && node dist/index.js",
-    "test": "jest"
+    "test": "jest --passWithNoTests"
   },
   "keywords": [
     "Javascript",
